--- a/index.html
+++ b/index.html
@@ -260,13 +260,15 @@
     <label for="employeeName">اسم الموظف</label>
     <input type="text" id="employeeName" placeholder="أدخل اسم الموظف">
 
+      <div class="checkbox-group">
+      <label><input type="checkbox" id="hasSkills" />  المهارات</label>
+      <label><input type="checkbox" id="hasAbility" /> القدرة</label>
+    </div>
+
     <label for="managerName">اسم مدير المدرسة</label>
     <input type="text" id="managerName" placeholder="أدخل اسم مدير المدرسة">
 
-    <div class="checkbox-group">
-      <label><input type="checkbox" id="hasSkills" /> لديه مهارات</label>
-      <label><input type="checkbox" id="hasAbility" /> لديه قدرة</label>
-    </div>
+  
 
     <div class="tasks-row">
       <div class="tasks-list" id="tasksList">
@@ -456,4 +458,5 @@
   </script>
 </body>
 </html>
+
 
